--- a/.jshintrc
+++ b/.jshintrc
@@ -3,7 +3,7 @@
   "eqeqeq": true, // triple equals FTW
   "globals": {
      // doublescore
-    "__": true,
+    "_": true,
 
      // jasmine
     "describe": false,
@@ -20,5 +20,5 @@
   "strict": false,
   "trailing": true, // trailing whitespace is bad
   "undef": true, // prohibits use of undeclared variables
-  "unused": true // warning for defined yet unused variables
+  "unused": false // warning for defined yet unused variables
 }
